--- a/ansible/roles/docker_deploy/defaults/main.yml
+++ b/ansible/roles/docker_deploy/defaults/main.yml
@@ -6,3 +6,5 @@ docker_email: myemail@example.com
 app_path: /path/to/app
 http_proxy: http://proxy.example.com:8080
 https_proxy: http://proxy.example.com:8080
+# roles/web_app/defaults/main.yml
+web_app_full_wipe: false
