--- a/ansible/roles/web_app/tasks/0-wipe.yml
+++ b/ansible/roles/web_app/tasks/0-wipe.yml
@@ -4,17 +4,17 @@
   block:
     - name: Stop and remove Docker container
       docker_container:
-        name: "your_container_name"
+        name: " infallible_clark"
         state: absent
 
     - name: Remove Docker image
       docker_image:
-        name: "your_image_name"
+        name: "moscowtime "
         state: absent
 
     - name: Remove docker-compose.yml file
       file:
-        path: /path/to/docker-compose.yml
+        path: /app_python/docker-compose.yml
         state: absent
   when: web_app_full_wipe
   tags: wipe
